# gb-emu

./: .gitignore  Cargo.toml
gb_emu_cli/: .test.txt.swp  Cargo.toml
gb_emu_cli/src/: main.rs
gb_emu_common/: .rustfmt.toml  Cargo.toml
gb_emu_common/src/: cpu.rs  error.rs  gpu.rs  instruction.rs  interrupt.rs  lib.rs  memory_bus.rs  timer.rs
gb_emu_common/src/cartridge/: cartridge_type.rs  header.rs  mod.rs  rom_only.rs
gb_emu_core/: Cargo.toml
gb_emu_core/src/: cpu.rs  cpu_registers.rs  gpu.rs  instruction.rs  lib.rs  memory_bus.rs
gb_emu_core/src/cartridge/: mod.rs  rom_only.rs
gb_emu_desktop/: .gitignore  Cargo.toml  index.html  wasm-bindgen-macroquad.sh
gb_emu_desktop/src/: config.rs  main.rs  wasm.rs
src/: cpu.rs  cpu_registers.rs  instruction.rs
