[package]
name = "gb_emu_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
gb_emu_common = { version = "*", path = "../gb_emu_common" }
macroquad = { version = "0.3.6", default-features = false }
egui-macroquad = "0.8.0"
egui = "0.16.0"
gilrs = { version = "0.8.2", features = ["wasm-bindgen"] }
once_cell = "1.9.0"

# Dependencies that aren't needed for the WASM version
[target.'cfg(not(target_family = "wasm"))'.dependencies] 
native-dialog = "0.6.3" # This depends on Zenity on linux
directories = "4.0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.56"
web-sys = { version = "0.3.4", features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window',
  'Blob',
  'FileList',
  'File',
  'Event',
  'FileReader',
] }